update app component

--- a/spacex-rockets/src/app/app.component.html
+++ b/spacex-rockets/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <div class="galerry">
+  <div class="gallery">
     <div class="item" *ngFor="let item of data">
       <h1>{{ item.name }}</h1>
       <p>{{ item.description }}</p>
